Fixed header from being covered by loading overlay

--- a/src/styles/header.module.css
+++ b/src/styles/header.module.css
@@ -88,4 +88,6 @@
     text-align: center;
     /* border-bottom: 1px solid #ddd; */
     border-bottom: 1px solid var(--theme-divider-fixed);
+    z-index: 100;
+    position: relative;
 }
